--- a/AppDomotica/app/src/main/res/layout/activity_main.xml
+++ b/AppDomotica/app/src/main/res/layout/activity_main.xml
@@ -74,5 +74,16 @@
         app:layout_constraintTop_toBottomOf="@+id/buttonAirConditioning"
         app:layout_constraintVertical_bias="0.112" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/buttonReset"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.983"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/stat_notify_sync" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
