--- a/AppDomotica/app/src/main/res/layout/activity_lightning.xml
+++ b/AppDomotica/app/src/main/res/layout/activity_lightning.xml
@@ -38,7 +38,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Switch
+    <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/switchIntLight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -52,7 +52,7 @@
         app:layout_constraintTop_toBottomOf="@+id/buttonIntLight"
         app:layout_constraintVertical_bias="0.07" />
 
-    <Switch
+    <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/switchExtLight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
