Solucion errores Switches

--- a/AppDomotica/app/src/main/res/layout/activity_lightning.xml
+++ b/AppDomotica/app/src/main/res/layout/activity_lightning.xml
@@ -44,7 +44,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="Automatico Luz Interior"
-        android:onClick="onClick"
+        android:textOn="ON"
+        android:textOff="OFF"
         app:layout_constraintBottom_toTopOf="@+id/buttonExtLight"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -58,7 +59,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
         android:text="Automatico Luz Exterior"
-        android:onClick="onClick"
+        android:textOn="ON"
+        android:textOff="OFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
