--- a/AppDomotica/app/src/main/res/layout/activity_security.xml
+++ b/AppDomotica/app/src/main/res/layout/activity_security.xml
@@ -22,7 +22,8 @@
         android:layout_width="240dp"
         android:layout_height="61dp"
         android:text="Modo fuera de casa"
-        android:onClick="onClick"
+        android:textOn="ON"
+        android:textOff="OFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
